force-app/main/default/objects/Author__c/Author__c.object-meta.xml
<CustomObject>
    <description>A person who has written one or more books that have been published.</description>
    <label>Author</label>
    <nameField>
        <label>Author Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>