force-app/main/default/objects/Author__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>The author&apos;s professional email address.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>