force-app/main/default/objects/Author__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <description>The genres that the author has written books for.</description>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>