force-app/main/default/objects/Author__c/fields/Number_Books_Authored__c.field-meta.xml
<CustomField>
    <fullName>Number_Books_Authored__c</fullName>
    <description>The number of books that this author has written.</description>
    <label>Number Books Authored</label>
    <summaryForeignKey>Book__c.Author__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>