force-app/main/default/objects/Author__c/fields/Planned_Publish_Date__c.field-meta.xml
<CustomField>
    <description></description>
    <fullName>Planned_Publish_Date__c</fullName>
    <label>Planned Publish Date</label>
    <type>Date</type>
</CustomField>