force-app/main/default/objects/Author__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The publisher that the author is currently contracted to.</description>
    <label>Publisher</label>
    <referenceTo>Publisher__c</referenceTo>
    <relationshipLabel>Authors</relationshipLabel>
    <relationshipName>Authors</relationshipName>
    <type>Lookup</type>
</CustomField>